--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./static/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>saksouni rla itc</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
             
     </div>
 </div>  
-    <script src="./static/index.js"> 
+    <script src="./index.js"> 
         
 
     </script>
