--- a/page1.html
+++ b/page1.html
@@ -12,7 +12,7 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./static/syle2.css">
+    <link rel="stylesheet" href="./syle2.css">
     <title>page1</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
 
   <!--onclick="getInputValue();"--> 
  
-    <script src="./static/index.js" type="text/javascript"></script>
+    <script src="./index.js" type="text/javascript"></script>
 
     
 </body>
