--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="static/style3.css">
+    <link rel="stylesheet" href="style3.css">
     
     <title>page3</title>
 </head>
